grammar/grammar.txt
# Grammar

## Tokens (Aplhabet)

eof

// numbers and identifiers
identifier
number

// keywords
begin
end
const
procedure
forward
function
if
then
else
program
while
exit
var
integer
for
do


assign
mod
div
not
and
or
xor

// keywords in for loop
to
downto

// keywords for array
array

// Operators
:=
=
<
>
>=
<=
<>


## Grammar
PROGRAM            -> name; SCOPE
SCOPE              -> VAR_DEF SCOPE
                   -> CONST_DEF SCOPE
                   -> FUNC SCOPE
                   -> MAIN

VAR_DEF            -> var VAR_BODY
VAR_BODY           -> name VAR_NAME
VAR_NAME           -> , VAR_BODY
                   -> : TYPE; VAR_BODY*
VAR_BODY*          -> VAR_BODY
                   -> 

CONST_DEF          -> const CONST_BODY
CONST_BODY         -> name = LITERAL; CONST_BODY
CONST_BODY*        -> CONST_BODY
                   -> 

LITERAL            -> NUMBER
                   -> string

TYPE               -> integer
                   -> float
                   -> array [ NUMBER .. NUMBER ] of TYPE

NUMBER             -> DEC_NUMBER
                   -> $HEX_NUMBER
                   -> &OCT_NUMBER
                   -> %BIN_NUMBER

FUNC               -> function name(PARAMS_E): TYPE;
FUNC*              -> BLOCK;
                   -> VAR_DEF BLOCK;
                   -> forward;
PARAMS_E           -> PARAMS
                   -> 
PARAMS             -> PARAM PARAMS*
PARAMS*            -> ; PARAM
                   -> 
PARAM              -> name : TYPE

MAIN               -> BLOCK.

BLOCK              -> begin STMT BLOCK* end
BLOCK*             -> ; BLOCK**
                   -> 
BLOCK**            -> STMT BLOCK*
                   -> 
           

STMT               -> EXPR
                   -> ASSIGN
                   -> FOR
                   -> WHILE
                   -> IF
                   -> exit

BORS               -> BLOCK
                   -> STMT

ASSIGN             -> VAR_ACCESS := EXPR


FOR                -> for ASSIGN FOR_DIR EXPR do BORS
FOR_DIR            -> to
                   -> downto

WHILE              -> while EXPR do BORS

IF                 -> if EXPR then BORS ELSE
ELSE               -> else BORS
                   -> 

EXPR               -> OP_BIN8
OP_BIN8            -> OP_BIN7 OP_BIN8*
OP_BIN8*           -> and OP_BIN8
                   -> 
OP_BIN7            -> OP_BIN6 OP_BIN7*
OP_BIN7*           -> or OP_BIN7
                   -> 
OP_BIN6            -> OP_BIN5 OP_BIN6*
OP_BIN6*           -> eq OP_BIN6
                   -> 
OP_BIN5            -> OP_BIN4 OP_BIN5*
OP_BIN5*           -> < OP_BIN5
                   -> 
OP_BIN4            -> OP_BIN3 OP_BIN4*
OP_BIN4*           -> * OP_BIN4
                   -> 
OP_BIN3            -> OP_BIN2 OP_BIN3*
OP_BIN3*           -> + OP_BIN3
                   -> 
OP_BIN2            -> + OP_BIN2
                   -> - OP_BIN2
                   -> OP_BIN1
OP_BIN1            -> ( EXPR )
OP_BIN1            -> VALUE


VALUE              -> number
                   -> text
                   -> VAR_ACCESS
                   -> FUN_CALL

VAR_ACCESS         -> name VAR_ACCESS*
VAR_ACCESS*        -> [EXPR] VAR_ACCESS*
                   -> 

FUN_CALL           -> name ( FUN_ARGS )
FUN_ARGS           -> EXPR FUN_ARGS*
FUN_ARGS*          -> , EXPR FUN_ARGS*
                   -> 


## Function list
dec
inc
writeln
readln
write
